[project]
name = "derivative-pricer"
version = "0.1.0"
description = "A production-ready European options pricing dashboard using Black-Scholes."
authors = [
    { name = "Jobby Thadicaran", email = "jobby@example.com" }
]
dependencies = [
    "streamlit>=1.45.1",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
]
